--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@ code {
 }
 
 .delete {
+  width: 80px;
+  height: 30px;
   background-color: red;
   border-radius: 20px;
   border: none;
@@ -20,4 +22,28 @@ code {
   margin-left: 5px;
   padding: 10px;
   cursor: pointer;
+  
+}
+
+.sendtweet {
+  width: 80px;
+  height: 30px;
+  background-color: #3642E3;
+  border-radius: 20px;
+  border: none;
+  color:white;
+  margin-left: 5px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.tweetbox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 500px;
+  border: 1px solid salmon;
+  margin: auto;
+  padding: 10px;
+  margin-bottom: 20px;
 }
