--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,45 @@ code {
   cursor: pointer;
   height: 13px;
 }
+
+.user-profile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+
+.user-profile button {
+  margin-left: 10px;
+  padding: 10px;
+}
+
+.user-profile img {
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.login-btn {
+  width: 367px;
+  height: 58px;
+  margin: 20px;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 5px 0px 0px 5px;
+  
+  border: none;
+  background-color: #4285F4;
+}
+
+.login-btn-logout{
+  width: 116px;
+  height: 35px;
+  margin: 20px;
+  padding: 10px;
+  cursor: pointer;
+  
+  border: none;
+  background-color: #F50D5A;
+}
