--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+@font-face {
+  font-family: 'silkscreen';
+  src: url(./fonts/slkscr.ttf) format('woff');
+}
+
+.App {
+  background-color: #2E132C;
+  width: 414px;
+  height: 896;
+}
+
+.logodevs {
+  width: 311px;
+  height: 207px;
+  margin-top: 140px;
+
+}
+
+.title1 {
+  font-family: silkscreen;
+  color: white;
+  font-size: 36px;
+  margin-top: 150px;
+}
+
+.title2 {
+  color: white;
+  font-family: 'Fira Code', monospace;
+  font-size: 18px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -18,11 +59,11 @@ code {
   background-color: red;
   border-radius: 20px;
   border: none;
-  color:white;
+  color: white;
   margin-left: 5px;
   padding: 10px;
   cursor: pointer;
-  
+
 }
 
 .sendtweet {
@@ -31,7 +72,7 @@ code {
   background-color: #3642E3;
   border-radius: 20px;
   border: none;
-  color:white;
+  color: white;
   margin-left: 5px;
   padding: 10px;
   cursor: pointer;
@@ -79,18 +120,18 @@ code {
   padding: 10px;
   cursor: pointer;
   border-radius: 5px 0px 0px 5px;
-  
+  margin-bottom: 80px;
   border: none;
   background-color: #4285F4;
 }
 
-.login-btn-logout{
+.login-btn-logout {
   width: 116px;
   height: 35px;
   margin: 20px;
   padding: 10px;
   cursor: pointer;
-  
+
   border: none;
   background-color: #F50D5A;
 }
