--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&family=Roboto:wght@300&display=swap');
 
 @font-face {
   font-family: 'silkscreen';
@@ -12,9 +13,17 @@
 }
 
 
-.App {}
+.App {
+  margin: 0;
+}
 
 .logoutContainer {
+  width: 414px;
+  height: 896px;
+  background-color: #2E132C;
+}
+
+.containerFeed {
   width: 414px;
   height: 896px;
   background-color: #2E132C;
@@ -44,79 +53,65 @@
   margin-bottom: 30px;
 }
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+
 
 .delete {
-  width: 80px;
-  height: 30px;
   background-color: red;
-  border-radius: 20px;
   border: none;
   color: white;
-  margin-left: 5px;
-  padding: 10px;
   cursor: pointer;
-
+  margin-right: 10px;
 }
 
-.sendtweet {
-  width: 80px;
-  height: 30px;
-  background-color: #3642E3;
-  border-radius: 20px;
-  border: none;
-  color: white;
-  margin-left: 5px;
-  padding: 10px;
-  cursor: pointer;
-}
+
 
 .tweetbox {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 500px;
+  width: 414px;
+  height: 190px;
   border: 1px solid salmon;
   margin: auto;
   padding: 10px;
   margin-bottom: 20px;
 }
 
+.containerLikes {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 15px;
+}
+
 .likesbtn {
   cursor: pointer;
-  height: 13px;
+  width: 20px;
+}
+
+.likesCounter {
+  font-family: 'silkscreen';
+  color: white;
+  margin-left: 5px;
 }
 
 .user-profile {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 20px;
-  width: 100%;
-}
-
-
-.user-profile button {
-  margin-left: 10px;
+  justify-content: space-between;
   padding: 10px;
+  width: 100%;
+  background-color: #250C23;
+  ;
 }
 
-.user-profile img {
-  border-radius: 50%;
-  margin-right: 10px;
+.user-profile-pic {
+  border-radius: 50px;
+  width: 75px;
 }
+
 
 .buttonContainer {
   display: flex;
@@ -151,10 +146,42 @@ code {
   padding: 10px;
   cursor: pointer;
   /* border-radius: 5px 0px 0px 5px; */
-
   border: none;
   background-color: #4285F4;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
 }
+
+.likefooter {
+  font-family: 'Fira Code', monospace;
+  margin-top: 50px;
+  font-style: normal;
+  font-weight: 450;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
+  letter-spacing: -0.333333px;
+  color: #60265B;
+}
+
+.likefooter-beta {
+  color: #F50D5A;
+}
+
+.likefooter-box {
+  width: 147px;
+  height: 5px;
+  bottom: 9px;
+  background: #000000;
+  border-radius: 10px;
+  margin: auto;
+  margin-top: 30px;
+}
+
+
 
 .login-btn-logout {
   width: 116px;
@@ -162,7 +189,100 @@ code {
   margin: 20px;
   padding: 10px;
   cursor: pointer;
-
+  font-family: 'silkscreen';
   border: none;
   background-color: #F50D5A;
+  display: flex;
+  justify-content: space-between;
+  font-size: 16px;
+}
+
+.login-btn-logout-img {
+  width: 20px;
+}
+
+.containerTweet {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #150714;
+
+}
+
+.containerTweet p {
+  font-family: 'silkscreen';
+  color: white;
+  padding: 20px;
+  font-size: 25px;
+}
+
+.containerTweet textarea {
+  width: 324px;
+  height: 150px;
+  background-color: #2F112D;
+  border: none;
+  color: #914D8B;
+  margin-bottom: 20px;
+
+}
+
+.sendtweet {
+  width: 130px;
+  height: 50px;
+  background-color: #2F112D;
+  font-family: 'silkscreen';
+  font-size: 30px;
+  border: none;
+  color: white;
+  cursor: pointer;
+  margin-left: 195px;
+  margin-bottom: 20px;
+}
+
+.containerPhotoTweet img {
+  width: 60px;
+  border-radius: 50px;
+}
+
+.containerAllTweet {
+  width: 100%;
+  height: 100%;
+}
+
+.containerHeaderTweet {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.containerHeaderTweet p {
+  font-family: 'silkscreen';
+  color: black;
+  background-color: #FFEA5C;
+  font-size: 23px;
+
+}
+
+.email {
+  font-family: 'Fira Code';
+  color: black;
+  text-align: left;
+  background-color: #800FFF;
+  font-size: 15px;
+}
+
+.boxTweet {
+  width: 324px;
+  height: 101px;
+  font-family: 'Fira Code';
+  font-style: normal;
+  font-weight: 450;
+  font-size: 14px;
+  line-height: 18px;
+  display: flex;
+  align-items: center;
+  letter-spacing: -0.333333px;
+  color: #FFFFFF;
+  margin-left: 20px;
+
 }
