--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@
   justify-content: space-between;
   align-items: center;
   width: 414px;
-  height: 190px;
+  height: 270px;
   border: 3px solid #60265B;
   margin: auto;
   padding: 10px;
@@ -254,6 +254,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 100%;
 }
 
 .containerHeaderTweet p {
