--- a/src/index.css
+++ b/src/index.css
@@ -60,10 +60,10 @@
 .delete {
   width: 20px;
   border: none;
-  background-color: #250C23;
+  background-color: #60265B;
   cursor: pointer;
-  margin-right: 10px;
-  margin-left: 10px;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 
@@ -77,6 +77,7 @@
   border: 3px solid #60265B;
   margin: auto;
   padding: 10px;
+  margin-bottom: ;
 
 }
 
@@ -286,7 +287,7 @@
   align-items: center;
   letter-spacing: -0.333333px;
   color: #FFFFFF;
-  margin-left: 20px;
+  margin: 10px;
 
 }
 
